[package]
name = "my-project"
version = "0.1.0"
authors = ["pppra <ppprateeksharma006@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "A desktop app that divide income"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"

[build-dependencies]
slint-build = "1.6"

[package.metadata.bundle]
name = "Income Divider"
indentifier =  